[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-medical_triage_env"
version = "0.1.0"
description = "Medical Triage Env environment for OpenEnv"
requires-python = ">=3.10"

dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi",
    "uvicorn",
    "pydantic",
    "scikit-learn",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "medical_triage_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["medical_triage_env", "medical_triage_env.server"]
package-dir = { "medical_triage_env" = ".", "medical_triage_env.server" = "server" }